cluster/apps/media/immich/app/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-gateway-to-immich"
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            istio.io/gateway-name: external-gateway
            k8s:io.kubernetes.pod.namespace: istio-system
      toPorts:
        - ports:
            - port: "3001"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-immich-to-immich"
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: immich
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: immich
      toPorts:
        - ports:
            - port: "3001"
              protocol: TCP
            - port: "3003"
              protocol: TCP
